fix: Remaining time display